--- a/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
+++ b/ADIN1100-Eval/Views/CableDiagnosticImageControl.xaml
@@ -10,6 +10,33 @@
              d:DesignHeight="300" d:DesignWidth="500">
     <UserControl.Resources>
         <converter:FaultDetectionParameterConverter x:Key="faultDetectionParamterConverter"/>
+
+        <Style x:Key="StartButtonStyle" TargetType="{x:Type telerik:RadButton}">
+            <Setter Property="Width" Value="80"/>
+            <Setter Property="Background" Value="{DynamicResource Button.Gradient.Static.Background}"/>
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="true" CornerRadius="10">
+                            <Grid>
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            </Grid>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Foreground" Value="{DynamicResource BottomPane.Graph.Button.Hovered.Foreground}"/>
+                                <Setter Property="Background" Value="{DynamicResource BottomPane.Graph.Button.Hovered.Background}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="true">
+                                <Setter Property="Foreground" Value="{DynamicResource BottomPane.Graph.Button.Hovered.Foreground}"/>
+                                <Setter Property="Background" Value="{DynamicResource BottomPane.Graph.Button.Hovered.Background}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
     <Grid>
         <Grid>
@@ -28,7 +55,9 @@
                 <Border Height="100" Width="130" Background="#FF5E8FCB" CornerRadius="7" BorderThickness="0"/>
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                     <TextBlock Text="TDR Engine" HorizontalAlignment="Center" Foreground="#FFD8D8D8" FontSize="20"/>
-                    <telerik:RadButton CornerRadius='15' Width="103" Margin="0,10,0,0" Content="Start" Command="{Binding RunFaultDetectionCommand}">
+                    <telerik:RadButton CornerRadius='15' Width="103" Height="25"
+                                       Margin="0,10,0,0" Content="Start" Command="{Binding RunFaultDetectionCommand}"
+                                       Style="{StaticResource StartButtonStyle}">
                         <!--<telerik:RadButton.CommandParameter>
                             <MultiBinding Converter="{StaticResource faultDetectionParamterConverter}">
                                 <Binding ElementName="CableType" Path="Text"/>
